--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -22,9 +22,18 @@ android {
         jniLibs.useLegacyPackaging true
     }
 }
+repositories {
+    maven {
+        url = 'https://maven.brott.dev/'
+    }
+    maven { url = 'https://jitpack.io' }
+}
 
 dependencies {
     implementation project(':FtcRobotController')
-    implementation  'org.ftclib.ftclib:core:2.1.1'
-    implementation 'org.ftclib.ftclib:vision:2.1.0'
+    implementation 'org.ftclib.ftclib:vision:2.1.0' // vision
+    implementation 'org.ftclib.ftclib:core:2.1.1' // core
+    implementation 'com.acmerobotics.roadrunner:core:1.0.0'
+    implementation 'com.acmerobotics.dashboard:dashboard:0.4.16'
+    implementation 'com.github.Eeshwar-Krishnan:PhotonFTC:v3.0.2-ALPHA'
 }
